<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gps">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/speed_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed_max"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/speed_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed_min"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/speed_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed_average"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/altitude_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altitude_max"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/altitude_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altitude_min"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/altitude_gain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altitude_gain"
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/altitude_loss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altitude_loss"
                    android:textSize="18sp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/distance_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/speed_max_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/speed_min_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/speed_average_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/altitude_max_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/altitude_min_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/altitude_gain_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"/>
                <TextView
                    android:id="@+id/altitude_loss_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/graphLegend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altitude_depending_on_the_time"
                android:textSize="23sp" />

            <lewitanski.lisa.com.assignment3.Graph
                android:id="@+id/grapheuh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/grid" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>